fix overflow of item names in very small devices

--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -158,7 +158,7 @@ section {
 .item_name{
     border: 1px solid #000000;
     font-size: 1.5em;
-    width: 30%;
+    width: 35%;
     text-align: center;
     float: right;
 }
